--- a/public/css/painelUsuario.css
+++ b/public/css/painelUsuario.css
@@ -35,6 +35,11 @@ h1 {
   padding-block: 3rem;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .codigo h2 {
   margin-left: 8rem;
   font-size: 2.4rem;
