--- a/public/css/pedidoConcluido.css
+++ b/public/css/pedidoConcluido.css
@@ -55,6 +55,10 @@ h1 {
   border-bottom: 1px solid black;
 }
 
+.produto-selecionado img {
+  margin-bottom: 3rem;
+}
+
 .descricao-produto {
   width: 30rem;
   font-size: 1.8rem;
