--- a/public/css/produtos.css
+++ b/public/css/produtos.css
@@ -82,6 +82,10 @@ main {
    border-radius: .5rem;
 }
 
+.produto-main h2{
+    font-size: 5rem;
+}
+
 .produto-main h3 {
     font-weight: 400;
 }
@@ -96,6 +100,10 @@ main {
 
 .produto-main span {
     font-weight: 700;
+}
+
+.produto-main h4 {
+    font-size: 4rem;
 }
 
 .produto-main button.btn.btn-success {
