--- a/views/home/produtos.ejs
+++ b/views/home/produtos.ejs
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="/css/produtos.css">
+<link rel="stylesheet" href="/css/footer.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<title>Produtosboa</title>
+<title><%=produto.nome%></title>
 <%- include('../partials/header') %>
     <main>
         <section id="produto" class="produto">
@@ -22,9 +23,9 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <div>
-                        <h4>Por <%=produto.preco%></h4>
+                        <h4>Por R$ <%=produto.preco%></h4>
                     </div>
-                    <h3><%=produto.categorias_id%></h3>
+                    <h3><%=produto.categoria_id%></h3>
                     <p><%=produto.descricao%></p>
                     <!-- produto em si entra aqui -->
                     <h3>Informacoes para compra</h3>
@@ -48,8 +49,7 @@
 
         </div>
 
-        <section class="produtos-relacionados">
-            <!-- exemplos -->
+        <!-- <section class="produtos-relacionados">
             <div>
                 <h2>Produtos Relacionados</h2>
             </div>
@@ -69,7 +69,7 @@
                     <button id="#">Ver Mais</button>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="avaliacoes">
             <h2>Avaliações</h2>
