--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -65,13 +65,12 @@
     </header>
     <nav>
         <ul>
-            <li><a href="">Todos</a></li>
-            <li><a href="">Promoções</a></li>
-            <li><a href="">Para você</a></li>
-            <li><a href="">Computadores</a></li>
-            <li><a href="">Celulares/Tablets</a></li>
-            <li><a href="">Televisores</a></li>
-            <li><a href="">Acessórios</a></li>
+            <li><a href="/lista">Todos os Produtos</a></li>
+            <li><a href="/categorias/5">Video Games</a></li>
+            <li><a href="/categorias/3">Computadores</a></li>
+            <li><a href="/categorias/4">Celulares/Tablets</a></li>
+            <li><a href="/categorias/1">Headsets</a></li>
+            <li><a href="/categorias/2">Teclados</a></li>
         </ul>
     </nav>
 </body>
