--- a/views/partials/headerLogado.ejs
+++ b/views/partials/headerLogado.ejs
@@ -53,7 +53,7 @@
             <li><a href="">Todos</a></li>
             <li><a href="">Promoções</a></li>
             <li><a href="">Para você</a></li>
-            <li><a href="">Computadores</a></li>
+            <li><a href="/home/lista/:id">Computadores</a></li>
             <li><a href="">Celulares/Tablets</a></li>
             <li><a href="">Televisores</a></li>
             <li><a href="">Acessórios</a></li>
