--- a/views/home/categorias.ejs
+++ b/views/home/categorias.ejs
@@ -1,60 +1,38 @@
-<link rel="stylesheet" href="/css/categorias.css">
-<title>Categorias</title>
+<link rel="stylesheet" href="/css/stylehome.css">
+<title>Muambas.net</title>
 <%- include('../partials/header') %>
-    <main>
-        <h1>Resultado</h1>
-        <section class="categorias">
 
-            
-                <div class="card">
-                    <a class="" href="/categoria/<%=categoria.id %>"> </a>
-                    <img src="images/headsets.jpg" width="150" height="130" alt="">
+    <!-- Sessão de produtos -->
 
-                    <p>Headset<br>
+    <main class="container">
 
-                    </p>
+        <section class="destaques card-lista">
 
+            <% categorias.forEach(produto=>{ %>
+                <div class="card ">
+                    <a class="" href="/produtos/<%=produto.id %>">
+                        <img src="/images/produtos/<%=produto.imagem%>" width="150" height="130" alt=""></img>
+                        <p>
+                                <%= `${produto.nome.substring(0, 20)}...` %>
+                        </p>  
+                        <p>
+                            R$ <%=produto.preco.toFixed(2)%>
+                        </p>
+                        <span>À vista no pix</span>
+                        <div>
+                            <div>
+                                <form class="form-button" action="/carrinho/adicionar" method="POST">
+                                    <input type="hidden" name="id" value="<%= produto.id %>" />
+                                    <input type="hidden" name="nome" value="<%= produto.nome %>" />
+                                    <input type="hidden" name="preco" value="<%= produto.preco %>" />
+                                    <input type="hidden" name="imagem" value="<%= produto.imagem %>" />
+                                    <button type="submit" name="btn2">Compre agora</button>
+
+                                </form>
+                    </a>
+                            </div>
+                         </div>
                 </div>
-            
 
-            <div class="card">
-                <img src="images/teclados.jpg" width="150" height="130" alt="">
-
-                <p> Teclados <br>
-                </p>
-
-            </div>
-            
-
-            <div class="card">
-                <img src="images/notebooks.jpg" width="150" height="130" alt="">
-
-                <p> Notebooks <br>
-                </p>
-
-            </div>
-            
-
-            <div class="card">
-                <img src="images/celulares.jpg" width="150" height="130" alt="">
-
-                <p> Telefones <br>
-                </p>
-
-            </div>
-            
-
-            <div class="card">
-                <img src="images/video games.jpg" width="150" height="130" alt="">
-
-                <p> Video-Games <br>
-                </p>
-
-            </div>
+                <% }) %>
         </section>
-
-    </main>
-    <%- include('../partials/footer') %>
-    </body>
-
-    </html>
