update: ajuste final

--- a/views/home/pedidoConcluido.ejs
+++ b/views/home/pedidoConcluido.ejs
@@ -36,7 +36,7 @@
                   <h2><%= produto.nome %></h2>
                 </div>
                 <div class="preco">
-                  <p>R$ <%= produto.preco %></p>
+                  <p>R$ <%= produto.preco.toFixed(2) %></p>
                 </div>
 
               </div>
