--- a/views/home/produtos.ejs
+++ b/views/home/produtos.ejs
@@ -23,7 +23,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <div>
-                        <h4>Por R$ <%=produto.preco%></h4>
+                        <h4>Por R$ <%=produto.preco.toFixed(2)%></h4>
                     </div>
                     <h3><%=produto.categoria_id%></h3>
                     <p><%=produto.descricao%></p>
