--- a/views/adm/detalhes.ejs
+++ b/views/adm/detalhes.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/produtos.css">
+<link rel="stylesheet" href="/css/footer.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <title>Produtos</title>
@@ -27,8 +28,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <div>
-                        <span>DE R$3.000,00</span>
-                        <h4>Por <%=produtos.preco%>
+                        <h4>Por R$ <%=produtos.preco.toFixed(2)%>
                         </h4>
                     </div>
                     <h3>
@@ -58,29 +58,6 @@
         </section>
 
         </div>
-
-        <section class="produtos-relacionados">
-            <!-- exemplos -->
-            <div>
-                <h2>Produtos Relacionados</h2>
-            </div>
-            <div class="relacionados-img">
-                <div class="card">
-                    <img src="images/notebook.jpg" alt="Notebook">
-                    <button id="#">Ver Mais</button>
-                </div>
-
-                <div class="card">
-                    <img src="images/GAMER.png" alt="">
-                    <button id="#">Ver Mais</button>
-                </div>
-
-                <div class="card">
-                    <img src="images/CELULAR-SMARTPHONE_1645045581.png" alt="">
-                    <button id="#">Ver Mais</button>
-                </div>
-            </div>
-        </section>
 
         <section class="avaliacoes">
             <h2>Avaliações</h2>
