--- a/views/home/categorias.ejs
+++ b/views/home/categorias.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/stylehome.css">
+<link rel="stylesheet" href="/css/footer.css">
 <title>Muambas.net</title>
 <%- include('../partials/header') %>
 
@@ -36,3 +37,4 @@
 
                 <% }) %>
         </section>
+        <%- include('../partials/footer') %>
