--- a/views/usuario/detalhesPedido.ejs
+++ b/views/usuario/detalhesPedido.ejs
@@ -27,7 +27,7 @@
                   <h2><%= produto.nome %></h2>
                 </div>
                 <div class="preco">
-                  <p>R$ <%= produto.preco %></p>
+                  <p>R$ <%= produto.preco.toFixed(2) %></p>
                 </div>
 
               </div>
